# Solving-matrix-equations-by-the-Gauss-method

./: README.md  main.py  pyproject.toml
