    [tool.poetry]
name = "grpc"
version = "0.1.0"
description = ""
authors = ["Герман Гриценко <gerfest.gricenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
aiohttp = "^3.8.1"
requests = "^2.28.1"
html5lib = "^1.1"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
grpcio-tools = "^1.48.1"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
